--- a/public/src/app/header/color-palette/color-palette.component.less
+++ b/public/src/app/header/color-palette/color-palette.component.less
@@ -1,6 +1,8 @@
 .colorBox {
-  width: 30px;
-  height: 30px;
-  margin-right: 10px;
-  margin-bottom: 10px;
+  border-radius: 2px;
+  width: 15px;
+  height: 15px;
+  margin-right: 6px;
+  margin-bottom: 4px;
+  padding: 0;
 }
