--- a/public/src/style/colors.less
+++ b/public/src/style/colors.less
@@ -31,7 +31,7 @@
 
   @key: at(@value, 1);
 
-  .generate-gradient(@key, @value);
+  .generate-gradient(@key, lighten(at(@value, 2), 20%));
 
   // color classes
   .@{key} {color: at(@value, 2);}
@@ -52,8 +52,8 @@
 .generate-gradient(@key, @value, @i:0, @d:0%) when (@i <= 9) {
 
   .hm-@{key}-@{i} {
-    background-color: darken(at(@value, 2), @d);
+    background-color: darken(@value, @d);
   }
 
-  .generate-gradient(@key, @value, @i + 1, @d + 2%)
+  .generate-gradient(@key, @value, @i + 1, @d + 5%)
 }
