--- a/public/src/app/content/shared/map-content/map-content.component.less
+++ b/public/src/app/content/shared/map-content/map-content.component.less
@@ -14,10 +14,11 @@
 .square {
   float: left;
   box-sizing:border-box;
-  width: 8px;
-  height: 8px;
-  margin-right: 4px;
-  margin-bottom: 4px;
+  width: @barWidth;
+  height: @barWidth;
+  margin-right: @barPadding;
+  margin-bottom: @barPadding;
+  border-radius: @borderRadius;
   //border: 1px solid rgba(0,0,0,0.2);
   //background-color: #88a;
 }
