--- a/public/src/app/header/header.component.less
+++ b/public/src/app/header/header.component.less
@@ -5,7 +5,7 @@
  * @since   23.03.2018
  */
 .landingpage {
-  padding-top: 150px;
+  padding-top: 300px;
 }
 
 .headerContainer {
@@ -19,9 +19,12 @@
     width: 100%;
     resize: none;
     overflow:hidden;
+    //border: solid;
+    //padding: 8px;
+    //box-sizing: border-box;
   }
 
-  button {
+  .sendEditButton {
     padding: 5px 10px;
     background-color: darken(@orange, 5%);
   }
@@ -37,3 +40,6 @@
   height: 100%
 }
 
+.roundedCorners {
+  border-radius: 2px;
+}
