--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -75,34 +75,34 @@ div {
  * @since   22.03.2018
  */
 .hm-orange-0 {
-  background-color: #fcc88a;
+  background-color: #fff7ed;
 }
 .hm-orange-1 {
-  background-color: #fcc380;
+  background-color: #feebd5;
 }
 .hm-orange-2 {
-  background-color: #fcbe76;
+  background-color: #fddfbc;
 }
 .hm-orange-3 {
-  background-color: #fbb96c;
+  background-color: #fdd3a3;
 }
 .hm-orange-4 {
-  background-color: #fbb562;
+  background-color: #fcc88a;
 }
 .hm-orange-5 {
-  background-color: #fbb058;
+  background-color: #fcbc71;
 }
 .hm-orange-6 {
-  background-color: #fbab4e;
+  background-color: #fbb058;
 }
 .hm-orange-7 {
-  background-color: #fba744;
+  background-color: #faa43f;
 }
 .hm-orange-8 {
-  background-color: #faa23a;
+  background-color: #fa9826;
 }
 .hm-orange-9 {
-  background-color: #fa9d30;
+  background-color: #f98d0d;
 }
 .orange {
   color: #fcc88a;
@@ -123,34 +123,34 @@ div {
   background-color: #fcbc71;
 }
 .hm-green-0 {
-  background-color: #c8dc92;
+  background-color: #eff5df;
 }
 .hm-green-1 {
-  background-color: #c4d98b;
+  background-color: #e5eecc;
 }
 .hm-green-2 {
-  background-color: #c1d783;
+  background-color: #dce8b9;
 }
 .hm-green-3 {
-  background-color: #bdd47b;
+  background-color: #d2e2a6;
 }
 .hm-green-4 {
-  background-color: #b9d274;
+  background-color: #c8dc92;
 }
 .hm-green-5 {
-  background-color: #b5cf6c;
+  background-color: #bfd57f;
 }
 .hm-green-6 {
-  background-color: #b1cc64;
+  background-color: #b5cf6c;
 }
 .hm-green-7 {
-  background-color: #adca5d;
+  background-color: #abc959;
 }
 .hm-green-8 {
-  background-color: #a9c755;
+  background-color: #a2c246;
 }
 .hm-green-9 {
-  background-color: #a6c54d;
+  background-color: #94b43b;
 }
 .green {
   color: #c8dc92;
@@ -171,34 +171,34 @@ div {
   background-color: #bfd57f;
 }
 .hm-yellow-0 {
-  background-color: #fed98f;
+  background-color: #fffbf4;
 }
 .hm-yellow-1 {
-  background-color: #fed685;
+  background-color: #fff3db;
 }
 .hm-yellow-2 {
-  background-color: #fed27a;
+  background-color: #ffeac1;
 }
 .hm-yellow-3 {
-  background-color: #fecf70;
+  background-color: #fee2a8;
 }
 .hm-yellow-4 {
-  background-color: #fecb66;
+  background-color: #fed98f;
 }
 .hm-yellow-5 {
-  background-color: #fec85c;
+  background-color: #fed175;
 }
 .hm-yellow-6 {
-  background-color: #fec552;
+  background-color: #fec85c;
 }
 .hm-yellow-7 {
-  background-color: #fec148;
+  background-color: #febf43;
 }
 .hm-yellow-8 {
-  background-color: #febe3e;
+  background-color: #feb729;
 }
 .hm-yellow-9 {
-  background-color: #feba33;
+  background-color: #feae10;
 }
 .yellow {
   color: #fed98f;
@@ -219,34 +219,34 @@ div {
   background-color: #fed175;
 }
 .hm-red-0 {
-  background-color: #edaea8;
+  background-color: #fefdfd;
 }
 .hm-red-1 {
-  background-color: #eba6a0;
+  background-color: #fae9e7;
 }
 .hm-red-2 {
-  background-color: #e99e97;
+  background-color: #f6d5d2;
 }
 .hm-red-3 {
-  background-color: #e8968f;
+  background-color: #f1c1bd;
 }
 .hm-red-4 {
-  background-color: #e68e86;
+  background-color: #edaea8;
 }
 .hm-red-5 {
-  background-color: #e4867e;
+  background-color: #e89a93;
 }
 .hm-red-6 {
-  background-color: #e27e76;
+  background-color: #e4867e;
 }
 .hm-red-7 {
-  background-color: #e0766d;
+  background-color: #e07269;
 }
 .hm-red-8 {
-  background-color: #df6e65;
+  background-color: #db5e54;
 }
 .hm-red-9 {
-  background-color: #dd665c;
+  background-color: #d74b3f;
 }
 .red {
   color: #edaea8;
@@ -267,34 +267,34 @@ div {
   background-color: #e89a93;
 }
 .hm-blue-0 {
-  background-color: #90c9e0;
+  background-color: #e0f0f6;
 }
 .hm-blue-1 {
-  background-color: #88c5de;
+  background-color: #cce6f1;
 }
 .hm-blue-2 {
-  background-color: #80c1dc;
+  background-color: #b8dceb;
 }
 .hm-blue-3 {
-  background-color: #78bdd9;
+  background-color: #a4d2e6;
 }
 .hm-blue-4 {
-  background-color: #70b9d7;
+  background-color: #90c9e0;
 }
 .hm-blue-5 {
-  background-color: #68b5d5;
+  background-color: #7cbfdb;
 }
 .hm-blue-6 {
-  background-color: #60b1d3;
+  background-color: #68b5d5;
 }
 .hm-blue-7 {
-  background-color: #58add1;
+  background-color: #54abcf;
 }
 .hm-blue-8 {
-  background-color: #50a9ce;
+  background-color: #40a1ca;
 }
 .hm-blue-9 {
-  background-color: #48a5cc;
+  background-color: #3494bc;
 }
 .blue {
   color: #90c9e0;
@@ -315,34 +315,34 @@ div {
   background-color: #7cbfdb;
 }
 .hm-turquoise-0 {
-  background-color: #c7ddd7;
+  background-color: #ffffff;
 }
 .hm-turquoise-1 {
-  background-color: #c0d9d3;
+  background-color: #f2f2f2;
 }
 .hm-turquoise-2 {
-  background-color: #bad6ce;
+  background-color: #e6e6e6;
 }
 .hm-turquoise-3 {
-  background-color: #b4d2ca;
+  background-color: #d9d9d9;
 }
 .hm-turquoise-4 {
-  background-color: #adcec5;
+  background-color: #cccccc;
 }
 .hm-turquoise-5 {
-  background-color: #a7cac1;
+  background-color: #bfbfbf;
 }
 .hm-turquoise-6 {
-  background-color: #a1c6bd;
+  background-color: #b3b3b3;
 }
 .hm-turquoise-7 {
-  background-color: #9ac2b8;
+  background-color: #a6a6a6;
 }
 .hm-turquoise-8 {
-  background-color: #94beb4;
+  background-color: #999999;
 }
 .hm-turquoise-9 {
-  background-color: #8ebbaf;
+  background-color: #8c8c8c;
 }
 .turquoise {
   color: #c7ddd7;
@@ -363,34 +363,34 @@ div {
   background-color: #b7d4cc;
 }
 .hm-grey-0 {
-  background-color: #6d6d6d;
+  background-color: #a0a0a0;
 }
 .hm-grey-1 {
-  background-color: #686868;
+  background-color: #939393;
 }
 .hm-grey-2 {
-  background-color: #636363;
+  background-color: #878787;
 }
 .hm-grey-3 {
-  background-color: #5e5e5e;
+  background-color: #7a7a7a;
 }
 .hm-grey-4 {
-  background-color: #595959;
+  background-color: #6d6d6d;
 }
 .hm-grey-5 {
-  background-color: #535353;
+  background-color: #606060;
 }
 .hm-grey-6 {
-  background-color: #4e4e4e;
+  background-color: #545454;
 }
 .hm-grey-7 {
-  background-color: #494949;
+  background-color: #474747;
 }
 .hm-grey-8 {
-  background-color: #444444;
+  background-color: #3a3a3a;
 }
 .hm-grey-9 {
-  background-color: #3f3f3f;
+  background-color: #2d2d2d;
 }
 .grey {
   color: #6D6D6D;
@@ -411,184 +411,34 @@ div {
   background-color: #606060;
 }
 .hm-lightGrey-0 {
-  background-color: #f1f1f1;
-}
-.hm-lightGrey-1 {
-  background-color: #ececec;
-}
-.hm-lightGrey-2 {
-  background-color: #e7e7e7;
-}
-.hm-lightGrey-3 {
-  background-color: #e2e2e2;
-}
-.hm-lightGrey-4 {
-  background-color: #dddddd;
-}
-.hm-lightGrey-5 {
-  background-color: #d8d8d8;
-}
-.hm-lightGrey-6 {
-  background-color: #d2d2d2;
-}
-.hm-lightGrey-7 {
-  background-color: #cdcdcd;
-}
-.hm-lightGrey-8 {
-  background-color: #c8c8c8;
-}
-.hm-lightGrey-9 {
-  background-color: #c3c3c3;
-}
-.lightGrey {
-  color: #F1F1F1;
-}
-.light-lightGrey {
-  color: #ffffff;
-}
-.dark-lightGrey {
-  color: #e4e4e4;
-}
-.bg-lightGrey {
-  background-color: #F1F1F1;
-}
-.bg-light-lightGrey {
   background-color: #ffffff;
 }
-.bg-dark-lightGrey {
-  background-color: #e4e4e4;
+.hm-lightGrey-1 {
+  background-color: #f2f2f2;
 }
-/**
- * Classes for Colors
- *
- * @author  Maya
- * @since   22.03.2018
- */
-.orange {
-  color: #FBB058;
+.hm-lightGrey-2 {
+  background-color: #e6e6e6;
 }
-.light-orange {
-  color: #fcc88a;
+.hm-lightGrey-3 {
+  background-color: #d9d9d9;
 }
-.dark-orange {
-  color: #faa43f;
+.hm-lightGrey-4 {
+  background-color: #cccccc;
 }
-.bg-orange {
-  background-color: #FBB058;
+.hm-lightGrey-5 {
+  background-color: #bfbfbf;
 }
-.bg-light-orange {
-  background-color: #fcc88a;
+.hm-lightGrey-6 {
+  background-color: #b3b3b3;
 }
-.bg-dark-orange {
-  background-color: #faa43f;
+.hm-lightGrey-7 {
+  background-color: #a6a6a6;
 }
-.green {
-  color: #B5CF6C;
+.hm-lightGrey-8 {
+  background-color: #999999;
 }
-.light-green {
-  color: #c8dc92;
-}
-.dark-green {
-  color: #abc959;
-}
-.bg-green {
-  background-color: #B5CF6C;
-}
-.bg-light-green {
-  background-color: #c8dc92;
-}
-.bg-dark-green {
-  background-color: #abc959;
-}
-.yellow {
-  color: #FEC85C;
-}
-.light-yellow {
-  color: #fed98f;
-}
-.dark-yellow {
-  color: #febf43;
-}
-.bg-yellow {
-  background-color: #FEC85C;
-}
-.bg-light-yellow {
-  background-color: #fed98f;
-}
-.bg-dark-yellow {
-  background-color: #febf43;
-}
-.red {
-  color: #E4867E;
-}
-.light-red {
-  color: #edaea8;
-}
-.dark-red {
-  color: #e07269;
-}
-.bg-red {
-  background-color: #E4867E;
-}
-.bg-light-red {
-  background-color: #edaea8;
-}
-.bg-dark-red {
-  background-color: #e07269;
-}
-.blue {
-  color: #68B5D5;
-}
-.light-blue {
-  color: #90c9e0;
-}
-.dark-blue {
-  color: #54abcf;
-}
-.bg-blue {
-  background-color: #68B5D5;
-}
-.bg-light-blue {
-  background-color: #90c9e0;
-}
-.bg-dark-blue {
-  background-color: #54abcf;
-}
-.turquoise {
-  color: #A7CAC1;
-}
-.light-turquoise {
-  color: #c7ddd7;
-}
-.dark-turquoise {
-  color: #97c0b6;
-}
-.bg-turquoise {
-  background-color: #A7CAC1;
-}
-.bg-light-turquoise {
-  background-color: #c7ddd7;
-}
-.bg-dark-turquoise {
-  background-color: #97c0b6;
-}
-.grey {
-  color: #6D6D6D;
-}
-.light-grey {
-  color: #878787;
-}
-.dark-grey {
-  color: #606060;
-}
-.bg-grey {
-  background-color: #6D6D6D;
-}
-.bg-light-grey {
-  background-color: #878787;
-}
-.bg-dark-grey {
-  background-color: #606060;
+.hm-lightGrey-9 {
+  background-color: #8c8c8c;
 }
 .lightGrey {
   color: #F1F1F1;
@@ -663,7 +513,7 @@ button:hover {
  * @since   23.03.2018
  */
 .landingpage {
-  padding-top: 150px;
+  padding-top: 300px;
 }
 .headerContainer {
   height: 126px;
@@ -676,7 +526,7 @@ button:hover {
   resize: none;
   overflow: hidden;
 }
-.headerContainer button {
+.headerContainer .sendEditButton {
   padding: 5px 10px;
   background-color: #fcbc71;
 }
@@ -688,11 +538,16 @@ button:hover {
 .col-3 {
   height: 100%;
 }
+.roundedCorners {
+  border-radius: 2px;
+}
 .colorBox {
-  width: 30px;
-  height: 30px;
-  margin-right: 10px;
-  margin-bottom: 10px;
+  border-radius: 2px;
+  width: 15px;
+  height: 15px;
+  margin-right: 6px;
+  margin-bottom: 4px;
+  padding: 0;
 }
 select {
   border: none;
@@ -707,11 +562,13 @@ select option {
   width: 8px;
   margin-right: 4px;
   float: left;
+  border-radius: 1px;
 }
 .quad {
   width: 8px;
   height: 8px;
   margin-top: 4px;
+  border-radius: 1px;
 }
 .long {
   height: 12px;
@@ -736,6 +593,7 @@ select option {
   height: 8px;
   margin-right: 4px;
   margin-bottom: 4px;
+  border-radius: 1px;
 }
 .square-fill {
   background-color: rgba(0, 0, 0, 0.2);
