--- a/public/src/app/content/shared/chart/time-chart/time-chart.component.html
+++ b/public/src/app/content/shared/chart/time-chart/time-chart.component.html
@@ -1,15 +1,13 @@
+<div [@timeChartState]="{value: triggerValue, params: {'bar_color': colors[color]}}">
+    <div
+         *ngFor="let h of hours; let i = index" class="hours">
 
-<div *ngFor="let h of hours; let i = index" class="hours">
+        <div *ngFor="let n of convertedValuesArrays[i]; let j = index"
+             class="animation quad bg-lightGrey">
+        </div>
 
-    <div *ngFor="let n of convertedValuesArrays[i]; let j = index"
-         [ngClass]="['quad bg-lightGrey']">
-    </div>
-
-    <div [@timeChartState]="{value: 'set', params: {
-    'bar_color': colors[color]
-    }}">
         <div *ngFor="let n of maxValueArray[i]; let j = index"
-             [ngClass]="[j == 0 ? 'quad bg-' + color : 'long bg-' + color]">
+             [ngClass]="[j == 0 ? 'animation quad bg-' + color : 'animation long bg-' + color]">
         </div>
     </div>
 </div>
