related jodel content

--- a/public/src/app/content/your-result-content/your-result-content.component.html
+++ b/public/src/app/content/your-result-content/your-result-content.component.html
@@ -9,6 +9,9 @@
 <div class="col-3">
     <app-result-content [resultData]="yourResultContent.result">
     </app-result-content>
+
+    <app-related-jodel [relatedJodel]="yourResultContent.relatedJodel">
+    </app-related-jodel>
 </div>
 
 
