--- a/public/src/style/fonts.less
+++ b/public/src/style/fonts.less
@@ -27,9 +27,19 @@ h3 {
 }
 
 input,textarea,button {
+  font-size: 0.9em;
   font-family: 'Fira Sans', sans-serif;
   border-style: none;
   outline: none;
+}
+
+textarea {
+  width: 100%;
+  resize: none;
+  overflow:hidden;
+  //border: solid;
+  //padding: 8px;
+  //box-sizing: border-box;
 }
 
 button {
