--- a/public/src/style/grid.less
+++ b/public/src/style/grid.less
@@ -27,6 +27,14 @@ div {
   box-sizing: border-box;
 }
 
+.m-t-0 {
+  margin-top: 0 !important;
+}
+
+.m-b-30 {
+  margin-bottom: 30px !important;
+}
+
 // generates columns with 10%,20%,..,100% width
 @padding: 1%;
 .generate-columns(9);
