--- a/public/src/styles.less
+++ b/public/src/styles.less
@@ -20,5 +20,6 @@
 
 @import "/app/content/content.component.less";
 @import "app/content/your-result-content/result-content/result-content.component.less";
+@import "app/content/your-result-content/related-jodel/related-jodel.component.less";
 @import "app/content/your-result-content/your-result-content.component.less";
 @import "app/content/keyword-content/keyword-content.component.less";
