--- a/public/src/style/fonts.less
+++ b/public/src/style/fonts.less
@@ -8,6 +8,10 @@ p {
   color: @darkGrey;
   font-size: 0.9em;
   margin: 0.8em 0;
+
+  &:first-of-type {
+    margin-top: 0;
+  }
 }
 
 h2 {
@@ -27,6 +31,7 @@ h3 {
 }
 
 input,textarea,button {
+  color: @darkGrey;
   font-size: 0.9em;
   font-family: 'Fira Sans', sans-serif;
   border-style: none;
