--- a/public/src/style/grid.less
+++ b/public/src/style/grid.less
@@ -31,6 +31,10 @@ div {
   margin-top: 0 !important;
 }
 
+.m-b-0 {
+  margin-bottom: 0 !important;
+}
+
 .m-b-30 {
   margin-bottom: 30px !important;
 }
