--- a/public/src/app/content/shared/time-content/time-content.component.html
+++ b/public/src/app/content/shared/time-content/time-content.component.html
@@ -2,8 +2,12 @@
 
 <!--TODO TIME CHART-->
 <div class="grid">
-    <app-time-chart [color]="color"
-                    [timeModel]="time">
 
-    </app-time-chart>
+    <div *ngFor="let model of timeModels">
+
+        <app-time-chart [color]="color"
+                        [timeModel]="model">
+        </app-time-chart>
+    </div>
+
 </div>
