--- a/public/src/styles.less
+++ b/public/src/styles.less
@@ -4,6 +4,7 @@
 @import "./style/colors_renderes.less";
 @import "./style/fonts.less";
 @import "./style/charts.less";
+@import "./style/autocomplete.less";
 
  //IMPORT COMPONENTS LESS FILES
 @import "./app/app.component.less";
