--- a/public/src/app/content/shared/map-content/map-content.component.html
+++ b/public/src/app/content/shared/map-content/map-content.component.html
@@ -18,7 +18,7 @@
                  ngClass="{{mapArr[y + '-' + x] ? classesMap[y + '-' + x] : ''}}"
                  id="{{y}}-{{x}}"
                  class="square"
-                 (mouseover)="updateInfoBox($event)">
+                 (mouseenter)="updateInfoBox($event)">
             </div>
 
         </div>
