--- a/public/src/app/header/header.component.html
+++ b/public/src/app/header/header.component.html
@@ -19,11 +19,14 @@
 
             <!--LOCATION / TIME / BUTTON-->
             <div class="col-3">
+              <div style="width:220px">
                 <ng-autocomplete
                   (selected)="Selected($event)"
                   [classes]="['ng-autocomplete-input']"
                   class="bg-{{contentService.color}}"
                   [group]="group"></ng-autocomplete>
+              </div>
+
                 <!--<input type="text"-->
                        <!--placeholder="Wähle deine Stadt"-->
                        <!--class="bg-{{contentService.color}}"-->
