--- a/public/src/style/autocomplete.less
+++ b/public/src/style/autocomplete.less
@@ -9,19 +9,29 @@
   position: relative;
   //margin-top: 25px;
   //height: 200px;
+  box-sizing: border-box;
 }
 .ng-autocomplete-dropdown .ng-autocomplete-inputs {
   position: relative;
+  box-sizing: border-box;
 }
+.ng-autocomplete-dropdown .ng-autocomplete-inputs input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: @darkGrey;
+  opacity: 1; /* Firefox */
+}
+
+
 .ng-autocomplete-dropdown .ng-autocomplete-inputs input {
   width: 100%;
-  padding: 6px 10px;
-  font-family: Arial;
+  //padding: 6px 10px;
+  //font-family: Arial;
   font-weight: normal;
   outline: none !important;
   font-size: 15px;
   //height: 56px;
-  border: 1px solid #e0e0e0;
+  //border: 1px solid #e0e0e0;
+  background-color: inherit;
+  color:@darkGrey;
 }
 
 .ng-autocomplete-dropdown .ng-autocomplete-placeholder {
@@ -54,13 +64,15 @@
   font-size: 15px;
   height: 24px;
   background-color: #ffffff;
+  //background-color: inherit;
+
 }
 .ng-autocomplete-dropdown .ng-dropdown .dropdown-item:nth-child(odd) {
   background-color: #efefef;
 }
 .ng-autocomplete-dropdown .ng-dropdown .dropdown-item.active {
   background-color: #0099cc;
-  color: #fff !important;
+  //color: #fff !important;
 }
 
 .ng-autocomplete-dropdown .ng-dropdown .dropdown-item .dropdown-item-highlight {
@@ -68,8 +80,9 @@
 }
 
 .ng-autocomplete-dropdown-icon {
-  display: block;
-  width: 12px;
+  display: none;
+  //display: block;
+  width: 20px;
   text-align: center;
   position: absolute;
   top: 0;
@@ -79,7 +92,7 @@
   cursor: pointer;
   z-index: 999;
   font-size: 12px;
-  color: #758694;
+  //color: #758694;
   padding: 6px 0;
 
 }
@@ -93,9 +106,9 @@
   border-right: 7px solid transparent;
   border-top: 7px solid #000;
   position: absolute;
-  right: -11px;
+  right: -12px;
   z-index: 999;
-  top: 14px;
+  top: 13px;
 }
 
 .ng-autocomplete-dropdown-icon.open:after {
