--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -520,18 +520,25 @@ button:hover {
 }
 .ng-autocomplete-dropdown {
   position: relative;
+  box-sizing: border-box;
 }
 .ng-autocomplete-dropdown .ng-autocomplete-inputs {
   position: relative;
+  box-sizing: border-box;
+}
+.ng-autocomplete-dropdown .ng-autocomplete-inputs input::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #262323;
+  opacity: 1;
+  /* Firefox */
 }
 .ng-autocomplete-dropdown .ng-autocomplete-inputs input {
   width: 100%;
-  padding: 6px 10px;
-  font-family: Arial;
   font-weight: normal;
   outline: none !important;
   font-size: 15px;
-  border: 1px solid #e0e0e0;
+  background-color: inherit;
+  color: #262323;
 }
 .ng-autocomplete-dropdown .ng-autocomplete-placeholder {
   position: absolute;
@@ -567,14 +574,13 @@ button:hover {
 }
 .ng-autocomplete-dropdown .ng-dropdown .dropdown-item.active {
   background-color: #0099cc;
-  color: #fff !important;
 }
 .ng-autocomplete-dropdown .ng-dropdown .dropdown-item .dropdown-item-highlight {
   font-weight: bold;
 }
 .ng-autocomplete-dropdown-icon {
-  display: block;
-  width: 12px;
+  display: none;
+  width: 20px;
   text-align: center;
   position: absolute;
   top: 0;
@@ -584,7 +590,6 @@ button:hover {
   cursor: pointer;
   z-index: 999;
   font-size: 12px;
-  color: #758694;
   padding: 6px 0;
 }
 .ng-autocomplete-dropdown-icon:after {
@@ -596,9 +601,9 @@ button:hover {
   border-right: 7px solid transparent;
   border-top: 7px solid #000;
   position: absolute;
-  right: -11px;
+  right: -12px;
   z-index: 999;
-  top: 14px;
+  top: 13px;
 }
 .ng-autocomplete-dropdown-icon.open:after {
   transform: rotate(180deg);
