Added disabled jodel content

--- a/public/src/app/content/your-result-content/related-jodel/related-jodel.component.less
+++ b/public/src/app/content/your-result-content/related-jodel/related-jodel.component.less
@@ -1,7 +1,9 @@
-input,textarea,button {
+.relatedJodel {
+  input,textarea,button {
 
-  &[disabled] {
-    background-color: white;
-    color: @darkGrey;
+    &[disabled] {
+      background-color: white;
+      color: @darkGrey;
+    }
   }
 }
