--- a/public/src/app/content/your-result-content/your-result-content.component.html
+++ b/public/src/app/content/your-result-content/your-result-content.component.html
@@ -10,7 +10,7 @@
     <app-result-content [resultData]="yourResultContent.result">
     </app-result-content>
 
-    <app-related-jodel [relatedJodel]="yourResultContent.relatedJodel">
+    <app-related-jodel class="relatedJodel" [relatedJodel]="yourResultContent.relatedJodel">
     </app-related-jodel>
 </div>
 
