--- a/public/src/app/header/header.component.html
+++ b/public/src/app/header/header.component.html
@@ -11,6 +11,7 @@
             <!--JODEL TEXT-->
             <div class="col-3">
                 <textarea rows="5"
+                          [disabled]="!jodelIsWriteable"
                           placeholder="Good Vibes only!"
                           class="bg-{{contentService.color}}"
                           [ngModel]="jodel.text">
@@ -19,20 +20,24 @@
 
             <!--LOCATION / TIME / BUTTON-->
             <div class="col-3">
-              <div style="width:220px">
+              <div *ngIf="jodelIsWriteable" style="width:220px">
                 <ng-autocomplete
                   (selected)="Selected($event)"
                   [classes]="['ng-autocomplete-input']"
                   class="bg-{{contentService.color}}"
                   [group]="group"></ng-autocomplete>
               </div>
+              <div *ngIf="!jodelIsWriteable">
+                <input disabled type="text"
+                       placeholder="Wähle deine Stadt"
+                       class="bg-{{contentService.color}}"
+                       [ngModel]="jodel.location"><br>
+              </div>
 
-                <!--<input type="text"-->
-                       <!--placeholder="Wähle deine Stadt"-->
-                       <!--class="bg-{{contentService.color}}"-->
-                       <!--[ngModel]="jodel.location"><br>-->
 
-                <input type="time"
+                <input
+                       [disabled]="!jodelIsWriteable"
+                       type="time"
                        [ngModel]="jodel.time"
                        class="bg-{{contentService.color}}"><br><br>
 
