--- a/public/src/app/header/header.component.html
+++ b/public/src/app/header/header.component.html
@@ -14,7 +14,7 @@
                           [disabled]="!jodelIsWriteable"
                           placeholder="Good Vibes only!"
                           class="bg-{{contentService.color}}"
-                          [ngModel]="jodel.text">
+                          [(ngModel)]="jodel.text">
                 </textarea>
             </div>
 
@@ -31,14 +31,14 @@
                 <input disabled type="text"
                        placeholder="Wähle deine Stadt"
                        class="bg-{{contentService.color}}"
-                       [ngModel]="jodel.location"><br>
+                       [(ngModel)]="jodel.location"><br>
               </div>
 
 
                 <input
                        [disabled]="!jodelIsWriteable"
                        type="time"
-                       [ngModel]="jodel.time"
+                       [(ngModel)]="jodel.time"
                        class="bg-{{contentService.color}}"><br><br>
 
             <button class="sendEditButton roundedCorners"
