--- a/public/src/style/colors.less
+++ b/public/src/style/colors.less
@@ -21,11 +21,20 @@
         red @red,
         blue @blue,
         turquoise @turquoise,
-        grey @grey,
-        lightGrey @lightGrey;
+        darkGrey @darkGrey,
+        lightGrey @lightGrey,
+        grey @grey;
+
+@jodelMainColors:
+        orange @orange,
+        green @green,
+        yellow @yellow,
+        red @red,
+        blue @blue,
+        turquoise @turquoise;
 
 @lightness: 10%;
-@darkness: 20%;
+@darkness: 0%;
 
 .for-each(@value in @jodelColors) {
 
